--- a/.github/workflows/scale-with-input.yml
+++ b/.github/workflows/scale-with-input.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r .github/scripts/requirements.txt
     - name: Updating helm chart
-      run: python ./scripts/scale.py ${{ github.event.inputs.minReplicas }}
+      run: python ./.github/scripts/scale.py ${{ github.event.inputs.minReplicas }}
     - name: Check for changes
       run: git status
     - name: Stage changed files
